# protein-lm-scaling

./: .gitignore  LICENSE.md  Protein-gym-preprocess.py  Protein-gym.py  README.md  protein_lm.yml  protein_lm_cuda.yml  setup.py  train.py
.github/workflows/: comment_bot.yml
.ipynb_checkpoints/: requirements-checkpoint.txt
docs/: CONTRIBUTING.md
protein_lm/configs/train/: toy.yaml  toy_hf.yaml  toy_localcsv.yaml
protein_lm/dataset/: cluster_dataset.py  clustering_metrics.py  clustering_mewtrics.py  uniref_cluster_mapping.py
protein_lm/evaluation/scripts/: contact_prediction.ipynb  contact_prediction.py  download_proteingym_data.py  fitness_supervised.py  fitness_zero_shot_AR.py  utils.py
protein_lm/evaluation/scripts.py/: Protein-gym.py  fitness_zero_shot_ESM.py
protein_lm/modeling/: train.py
protein_lm/modeling/getters/: data_collator.py  dataset.py  model.py  tokenizer.py  training_args.py  wandb_log.py
protein_lm/modeling/models/: __init__.py
protein_lm/modeling/scripts/: train.py
protein_lm/modeling/utils/: alibi_embedding.py  modules.py  rerope_embedding.py  rotary_embedding.py  scaled_rope_embedding.py
protein_lm/tests/: test_attention.py  test_cl.py  test_cl_continuous.py  test_contact_prediction.py  test_coord_check.py  test_encoding.py  test_fim.py  test_optuna_mup.py  test_tokenizer.py
protein_lm/tokenizer/: __init__.py  hf_tokenizer.py  tokenizer.py
protein_lm/tokenizer/rust_trie/: Cargo.toml  pyproject.toml
protein_lm/tokenizer/rust_trie/src/: lib.rs
protein_lm/utils/: data_utils.py  fim_collator.py
(+28 files in other folders)
