[build-system]
requires = ["maturin>=1.2,<2.0", "setuptools"]
build-backend = "maturin"

[project]
name = "rust_trie"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
features = ["pyo3/extension-module"]
